feat: ✨add finbert api

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 </style>
 
 <html>
-  <h1>I am BERT the stock market guru, how may I help you?</h1>
+  <h1>I am finBERT the stock market guru, how may I help you?</h1>
   <img src="../static/huggingface.png" alt="My Image" width="240" height="240"/>
   <form action="/" method="post">
     <p>Financial Text / Tweet:</p>
