feat: ✨add finetuned finbert model

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
   </form>
   <p>The sentiment for this financial text / tweet is: {{result}}</p>
   <br/>
+  <p>Example Text: Geopolitical tensions and energy supply disruptions further dampen investor confidence.</p>
   <br/>
   <form action="/financegpt" method="post">
     <p>Ask FinanceGPT for more in depth information!</p>
