--- a/templates/stockpriceanalyzer.html
+++ b/templates/stockpriceanalyzer.html
@@ -9,8 +9,17 @@
     cursor: pointer; 
     border-radius: 5px;
   }
-  .get_sentiment_button {
+  .get_stock_price_analysis_button {
     background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  .ask_finbert_button {
+    background-color: #17a2b8;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -27,36 +36,25 @@
     cursor: pointer;
     border-radius: 5px;
   }
-  .ask_stock_prize_analyzer_button {
-    background-color: #FF5BAE;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
-  }
 </style>
 
 <html>
-  <h1>I am finBERT the stock market guru, how may I help you?</h1>
-  <img src="../static/hugging-tweets.png" alt="My Image" width="300" height="240"/>
-  <form action="/" method="post">
-    <p>Financial Text / Tweet:</p>
-    <p><input type="text" name="tweet" style="width: 80%;"/></p>
-    <p><input type="submit" value="Get Sentiment" class="get_sentiment_button"/></p>
+  <h1>I am StockPriceAnalyzerGPT, how may I help you?</h1>
+  <img src="../static/huggingface.png" alt="My Image" width="320" height="240"/>
+  <form action="/stockpriceanalyzer" method="post">
+    <p>Enter Stock symbol: (Example symbols: "AAPL", "TSLA", "AMZN", "GOOGL", "NVDA", "JPM", "XOM", "KO", "WFC",  "VZ")</p>
+    <p><input type="text" name="selected_symbol" style="width: 80%;"/></p>
+    <p><input type="submit" value="Get Stock Price Analysis" class="get_stock_price_analysis_button"/></p>
   </form>
-  <p><b>The sentiment for this financial text / tweet is:</b> {{result}}</p>
+  <p><b>The analysis for the stock you chose is:</b> {{result}}</p>
   <br/>
-  <p>Example Text: Geopolitical tensions and energy supply disruptions further dampen investor confidence.</p>
-  <br/>
+  <form action="/" method="post">
+    <p>I want to ask finBERT instead.</p>
+    <p><input type="submit" value="Ask FinBERT" class="ask_finbert_button"/></p>
+  </form>
   <form action="/financegpt" method="post">
     <p>Ask FinanceGPT for more in depth information!</p>
     <p><input type="submit" value="Ask FinanceGPT" class="ask_financegpt_button"/></p>
-  </form>
-  <form action="/stockpriceanalyzer" method="post">
-    <p>Ask StockPriceAnalyzer for more stock price analysis.</p>
-    <p><input type="submit" value="Ask StockPriceAnalyzer" class="ask_stock_prize_analyzer_button"/></p>
   </form>
   <form action="/end" method="post">
     <p><input type="submit" value="Quit" class="exit_button"/></p>
