feat: ✨add tweet to interface

--- a/templates/financegpt.html
+++ b/templates/financegpt.html
@@ -46,7 +46,8 @@
     <p><input type="text" name="tweet" style="width: 80%;"/></p>
     <p><input type="submit" value="Get Sentiment" class="get_sentiment_button"/></p>
   </form>
-  <p><b>The sentiment for this financial text / tweet is:</b> {{result}}</p>
+  <p><b>Your tweet is:</b> {{result.tweet}} </p>
+  <p><b>The sentiment for this financial text / tweet is:</b> {{result.sentiment}}</p>
   <br/>
   <p>Example Text: Geopolitical tensions and energy supply disruptions further dampen investor confidence.</p>
   <br/>
